--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -10,4 +10,6 @@
 # Configuration parameters: AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, IgnoredPatterns.
 # URISchemes: http, https
 Metrics/LineLength:
+  Enabled: true
+  IgnoreCopDirectives: true
   Max: 97
