--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,6 +25,9 @@ RSpec/AlignRightLetBrace:
 RSpec/AnyInstance:
   Enabled: true
 
+RSpec/ContextWording:
+  Enabled: true
+
 RSpec/DescribedClass:
   Enabled: true
   EnforcedStyle: explicit
@@ -143,7 +146,9 @@ Style/MethodCallWithArgsParentheses:
     - be
     - describe
     - expect
+    - include_context
     - not_to
+    - shared_context
     - to
     # Rake
     - task
