--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,14 @@
 version: 2
 jobs:
   build:
-    machine: true
+    docker:
+      - image: circleci/ruby:2.5.1
+        environment:
+          AWS_PROFILE: dummy
+          AWS_REGION: ap-northeast-1
+      - image: localstack/localstack:latest
+        environment:
+          SERVICES: s3
     steps:
       - run: gem install bundler
       - checkout
