--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,8 @@ jobs:
     docker:
       - image: circleci/ruby:2.5.1
         environment:
-          AWS_PROFILE: dummy
+          AWS_ACCESS_KEY_ID: dummy
+          AWS_SECRET_ACCESS_KEY: dummy
           AWS_REGION: ap-northeast-1
       - image: localstack/localstack:latest
         environment:
