--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run: gem install bundler
       - checkout
       - restore_cache:
-          keys: gem-cache-v1-{{ arch }}-{{ .Branch }}-{{ checksum "bundler-source-s3.gemspec" }}
+          key: gem-cache-v1-{{ arch }}-{{ .Branch }}-{{ checksum "bundler-source-s3.gemspec" }}
       - run: bin/setup
       - save_cache:
           key: gem-cache-v1-{{ arch }}-{{ .Branch }}-{{ checksum "bundler-source-s3.gemspec" }}
